fix title and spacing. lets hope it looks good on mobile

--- a/homepage.css
+++ b/homepage.css
@@ -1,30 +1,38 @@
-body {
-    font: 1.1em/1.4 Cambria;
-    background: hsl(30,90%,98%);
-    width: 80ch;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-h1 {
+/* heading */
+#heading {
+    background-color: mistyrose;
+    width: auto;
+    height: 150px;
+    margin: 0px;
+    margin-bottom: 10px;
     text-align: center;
-    font-size: 2.8em;
-    font-weight: 600;
-    background: mistyrose;
-/*    margin-top:0;*/
-/*    height: 100px;*/
+}
+#logo {
+    font-size: 58pt;
+    font-weight: 500; /*400 is normal; 700 is the same as bold*/
+    padding-top: 43px;
+    line-height: 60%;
+}
+#description {
+    font-size: 24pt;
+    font-weight: lighter;
 }
 
+/* body */
+html {
+    font-style: Cambria;
+    background: hsl(30,90%,98%);
+}
+#contains {
+    font-size: 16pt;
+    margin: auto;
+    max-width: 700px;
+}
+
+/* footer */
 hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-    color: mistyrose;
+    margin: 20px 0px 8px 0px;
 }
-
 
 /* social media links and icons */
 .fa {
